[package]
name = "rute"
version = "0.0.1"
license = "MIT/Apache-2.0"
authors = ["Daniel Collin <daniel@collin.com>"]
description = "UI library implemented on top of Qt"
keywords = ["gui", "ui", "qt"]
categories = ["gui"]
build = "build.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
libloading = "0.5"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
