[package]
name = "rute"
version = "0.0.1"
license = "MIT/Apache-2.0"
authors = ["Daniel Collin <daniel@collin.com>"]
description = "UI library implemented on top of Qt"
repository = "https://github.com/emoon/rute"
keywords = ["gui", "ui", "qt"]
categories = ["gui"]
build = "build.rs"
readme = "../readme.md"

[features]
plugin-compatible = []

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
libloading = "0.5"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

