[package]
name = "rute"
version = "0.0.5"
license = "MIT/Apache-2.0"
authors = ["Daniel Collin <daniel@collin.com>"]
description = "UI library implemented on top of Qt"
repository = "https://github.com/emoon/rute"
keywords = ["gui", "ui", "qt"]
categories = ["gui"]
build = "build.rs"
readme = "../readme.md"

[features]
plugin-compatible = []

[badges]
maintenance = { status = "actively-developed" }
appveyor = { repository = "emoon/rute", branch = "master" }
travis-ci = { repository = "emoon/rute", branch = "master" }
is-it-maintained-issue-resolution = { repository = "emoon/rute" }
is-it-maintained-open-issues = { repository = "emoon/rute" }

[dependencies]
libloading = "0.5"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
rustc_version = "0.2"
