[package]
name = "rute_header_def_gen"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]

[dependencies]
heck = "0.3"
walkdir = "2"
rayon = "1.0"
pest = "2.0.2"
pest_derive = "2.0.1"
# qdoc_parser = { git = "https://github.com/emoon/qdoc_parser" }
# qdoc_parser = { path = "../../qdoc_parser" }

[dependencies.clang]
version = "0.20"
features = ["clang_4_0"]
